# vnstat-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  justfile  schema.sql  schema.sql.toml  vnstat-rs.db  vnstat-rs.service  vnstat.conf-sample  vnstatd-rs.service  vnstatd-rs.user.service
.github/workflows/: check.yml  release.yml
debian/: postinst  prerm
src/: config.rs  db.rs  display.rs  ipc.rs  lib.rs  main.rs  models.rs  utils.rs
src/db/: host.rs  interface.rs  migrations.rs  mod.rs  stats.rs
