[package]
name = "vnstat-rs"
version = "0.1.35"
edition = "2024"
authors = ["Seungjin Kim"]
license = "MIT OR Apache-2.0"

[dependencies]
libsql = { version = "0.6.0", features = ["hrana", "remote"] }
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
hostname = "0.4"
chrono = "0.4"
pnet_datalink = "0.35"
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"
daemonize = "0.5.0"
libc = "0.2.186"

[build-dependencies]
cargo_metadata = "0.18"

[[bin]]
name = "vnstat-rs"
path = "src/bin/vnstat.rs"

[[bin]]
name = "vnstatd-rs"
path = "src/bin/vnstatd.rs"
